@@ -3,4 +3,9 @@
 . /etc/profile
 oe_setup_addon service.sonarr
 
+if [ -z "$sr_nice" ]; then
+  sr_nice="0"
+fi
+
+nice -n "$sr_nice" \
 mono $ADDON_DIR/NzbDrone/NzbDrone.exe -data=$ADDON_HOME -nobrowser
